# ai-offline-translator

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  REASONIX.md
docs/: CNAME  PRD.md  flutter_mobile_architecture.md  index.html  llama_pr22836_notes.md  llama_windows_safety.md  models_inventory.md  validation_status_2026-05-15.md  validation_status_2026-05-16.md
docs/internal/: PRD.md  decision_record_2026-05-15.md  decision_record_2026-05-19.md  flutter_mobile_architecture.md  harmonyos_next_plan.md  llama_pr22836_notes.md  models_inventory.md  validation_status_2026-05-16.md
docs/superpowers/plans/: 2026-05-15-flutter-app-bootstrap.md  2026-05-15-macos-real-inference-integration.md  2026-05-16-android-native-translator.md  2026-05-16-macos-modelscope-downloader.md
docs/superpowers/specs/: 2026-05-14-bootstrap-design.md  2026-05-15-flutter-app-bootstrap-design.md  2026-05-15-offline-translator-app-implementation-design.md  2026-05-16-engine-upgrade-inapp-model-design.md  2026-05-16-macos-modelscope-downloader-design.md  2026-05-24-local-model-selector-design.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/cpp/: CMakeLists.txt  translator_jni.cpp  translator_jni_stub.cpp
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/design/: app_colors.dart  app_spacing.dart  app_theme.dart
flutter_app/macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift  TranslatorBridge-Bridging-Header.h  (+5 more)
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
models/: README.md
models/AngelSlim/: Hy-MT-demo-apk-technical-report.md
scripts/: build_android_llama.sh  safe_llama_smoketest.ps1  safe_llama_smoketest.py  setup.ps1  setup.sh  translator_engine_smoketest.cpp
(+32 files in other folders)
